fix: calendar width on mobile

--- a/frontend/appflowy_web_app/src/components/database/calendar/calendar.scss
+++ b/frontend/appflowy_web_app/src/components/database/calendar/calendar.scss
@@ -33,7 +33,7 @@ $today-highlight-bg: transparent;
   .rbc-month-row {
     border: 1px solid var(--line-divider);
     border-top: none;
-
+    min-width: 700px;
   }
 
   @include mixin.scrollbar-style;
